...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vuh-iv-b76" customClass="PagingView" customModule="PagingView">
                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                            </scrollView>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1cx-tI-h0W">
                                <rect key="frame" x="20" y="40" width="48" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="ToLeftButton"/>
                                <state key="normal" title="To Left"/>
                                <connections>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Lf-Dv-pNm">
                                <rect key="frame" x="266" y="40" width="68" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="ToCenterButton"/>
                                <state key="normal" title="To Center"/>
                                <connections>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cB3-UN-SdQ">
                                <rect key="frame" x="523" y="40" width="57" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="ToRightButton"/>
                                <state key="normal" title="To Right"/>
                                <connections>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7wR-sl-RLG">
                                <rect key="frame" x="276" y="447" width="47" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="ReloadButton"/>
                                <state key="normal" title="Reload"/>
                                <connections>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="{Path}" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2g0-wC-Ne1">
                                <rect key="frame" x="396" y="497" width="47.5" height="20.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="WillDisplayLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="{Path}" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="110-kI-WJb">
                                <rect key="frame" x="396" y="525" width="47.5" height="20.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="DidEndDisplayLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="{Path}" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OMi-Iu-CqH">
                                <rect key="frame" x="396.5" y="553" width="47.5" height="20.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="ConfigureLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="{Path}" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K4x-jr-eOq">
                                <rect key="frame" x="396" y="581" width="47.5" height="20.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="ReloadLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
